# Polygon-Area-Calculator

./: 404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE (MIT License)  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
api/: index.html
cli/: index.html
docs/: api.md  cli.md  examples.md  index.md  usage.md
examples/: index.html
polygon_calculator/: __init__.py  cli.py  rectangle.py  square.py
search/: search_index.json
tests/: test_rectangle.py  test_square.py
usage/: index.html
